# chronicle-rust

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  schema.sql
src/: main.rs  thought.rs  timeline.rs
