[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2018"
name = "arise"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.17"
# XXX these don't work
trunk = ""
wasm-bindgen-cli = ""
