[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2018"
name = "now"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
anyhow = ""
yew = "0.17"
