[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2018"
keywords = ["web"]
license = "AGPL-3.0-only"
name = "chronicle"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
yew-router = "0.14"
yewtil = "0.3.2"
# https://github.com/supabase/postgrest-rs/pull/23
chrono = {version = "0.4", features = ["serde"]}
postgrest = {git = "https://github.com/srid/postgrest-rs", branch = "master"}
reqwest = {version = "0.10", features = ["json"]}
serde = "1.0"
